finished SORM  ambitious Model

--- a/MyJava_study/build.gradle
+++ b/MyJava_study/build.gradle
@@ -6,5 +6,12 @@ dependencies {
     compile files('libs/commons-collections4-4.0-alpha1.jar')
     compile files('libs/javassist-3.14.0-ga-1.0.0.jar')
     compile files('libs/mysql-connector-java-5.1.25-bin.jar')
+    compile files('libs/mysql-connector-java-5.1.25-bin.jar')
 }
+
+task copyFile(type: Copy) {
+    from "src\\main\\Resources"
+    into "build\\classes\\main\\Resources"
+}
+
 tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
